<resources>
    <string name="app_name">FreelanceFirst</string>
    <string name="BASE_URL">https://asia-south1-firebaseauthtrigger.cloudfunctions.net/Dummy/</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="home">Home</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="processed_with_login">Processed with Login</string>
    <string name="login">Login</string>
    <string name="send_otp">Send otp</string>
    <string name="verification">Verification</string>
    <string name="you_will_get_otp_via_sms">You will get OTP via SMS</string>
    <string name="verify_otp">verify otp</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="contact_details">Name : ---------- \nEmail : ---------------\nPhone : +91 7870xxxxxx</string>
    <string name="about_details">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="camera">Camera</string>
    <string name="gallery">gallery</string>
</resources>